# Meeting_Record

./: .gitignore  README.md  pyproject.toml
.claude/: lessons.md
config/: gen_prompt_template.md  lora_config.yaml  system_prompt.txt
data/processed/: test.jsonl  valid.jsonl
data/raw/: batch_02.jsonl  batch_05.jsonl  batch_06.jsonl  batch_08.jsonl  batch_09.jsonl  batch_10.jsonl  batch_14.jsonl  batch_15.jsonl  batch_16.jsonl  batch_17.jsonl  batch_20.jsonl  batch_21.jsonl  batch_22.jsonl  batch_24.jsonl  batch_25.jsonl  batch_26.jsonl  batch_27.jsonl
docs/: eval_report.md
docs/superpowers/plans/: 2026-07-06-lora-meeting-summary.md
docs/superpowers/specs/: 2026-07-05-gui-design.md  2026-07-06-lora-meeting-summary-design.md
ollama/: Modelfile
scripts/: evaluate.py  export.sh  gen_seeds.py  prepare_data.py  validate_data.py
src/meeting_record/: __init__.py  cli.py  diarize.py  extract.py  models.py  output.py  summarize.py  templates.py  transcribe.py
src/meeting_record/gui/: __init__.py  jobs.py  server.py  settings.py
src/meeting_record/templates/: project_sync.json  standard_meeting.json
tests/: test_core.py  test_diarize.py  test_gui.py  test_prepare_data.py  test_validate_data.py
training/: .gitignore  pyproject.toml
training/config/: lora_config.yaml
training/data/processed/: train.jsonl
training/data/raw/: batch_01.jsonl  batch_03.jsonl  batch_04.jsonl  batch_07.jsonl  batch_11.jsonl  (+8 more)
training/docs/: sample_output.md  sample_transcript.txt
training/scripts/: train.sh
training/tests/: test_evaluate.py  test_gen_seeds.py
(+3 files in other folders)
