[project]
name = "meeting-record"
version = "0.1.0"
description = "本地會議記錄工具：Teams 錄影 → Whisper 轉錄 → LLM 會議紀錄，資料不出內網"
readme = "README.md"
authors = [
    { name = "a23444452", email = "a23444452@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
meeting-record = "meeting_record.cli:app"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
